--- a/custom/error.html
+++ b/custom/error.html
@@ -4,7 +4,7 @@
 {% if status_code == 403 %}
 {{ super() }}
 <p>
-    <strong>It looks like you need to request an account!</strong> If you are a first time user, you can Sign Up from <a href="https://{{ domain_name }}/hub/login">the login page</a>
+    <strong>It looks like you need to request an account!</strong> If you are a first time user, you can Sign Up from <a href="https://{{ domain_name }}/hub/login">the login page</a>.
 </p>
 {% elif status_code == 401 %}
 {{ super() }}
@@ -19,7 +19,7 @@
 {% elif status_code == 500 %}
 {{ super() }}
 <p>
-    Oh no! Something is wrong on our end. If this problem persists, please join our #opendatacube slack channel or
+    Oh no! Something is wrong on our end. If this problem persists, please join our <a href="https://opendatacube.slack.com">#opendatacube slack channel</a> or
     <a href="earth.observations@ga.gov.au">email us</a>.
 </p>
 {% else %}
