Revert master error.html to previous tested

--- a/custom/error.html
+++ b/custom/error.html
@@ -1,20 +1,15 @@
 {% extends "templates/error.html" %}
 
-
 {% block h1_error %}
-{{ super() }}
-
-{% endblock h1_error %}
-
-{% block error_details %}
 {% if status_code == 403 %}
 {{ super() }}
 <p>
-    <strong>It looks like you need to request an account!</strong> If you are a first time user, you can Sign Up from <a href="https://{{ domain_name }}/hub/login">the login page</a>.
+    <strong>It looks like you need to request an account!</strong> If you are a first time user, you can Sign Up from <a href="https://{{ domain_name }}/hub/login">the login page</a>
 </p>
 {% elif status_code == 401 %}
+{{ super() }}
 <p>
-    Session has expired: Please <a href="https://{{ domain_name }}/hub/logout">login</a> again.
+    Please <a href="https://{{ domain_name }}/hub/logout">login</a> again!!
 </p>
 {% elif status_code == 400 %}
 {{ super() }}
@@ -24,8 +19,11 @@
 {% elif status_code == 500 %}
 {{ super() }}
 <p>
-    Oh no! Something is wrong on our end. If this problem persists, please join our <a href="https://opendatacube.slack.com">#opendatacube slack channel</a> or
+    Oh no! Something is wrong on our end. If this problem persists, please join our #opendatacube slack channel or
     <a href="earth.observations@ga.gov.au">email us</a>.
 </p>
+{% else %}
+{{ super() }}
 {% endif %}
-{% endblock error_details %}
+
+{% endblock h1_error %}
